# rstask

./: Cargo.toml  LICENSE  README.md
.sampo/: config.toml
.sampo/changesets/: steadfast-forgemaster-mielikki.md
completions/: powershell.ps1  zsh.sh
crates/rstask/: CHANGELOG.md  Cargo.toml
crates/rstask-core/: CHANGELOG.md  Cargo.toml
crates/rstask-core/src/: commands.rs  constants.rs  git.rs  taskset.rs
crates/rstask/completions/: bash.sh  fish.fish  zsh.sh
crates/rstask/src/: cli.rs  completions.rs  main.rs  tui.rs
crates/rstask/tests/: next_filters.rs  next_id_index.rs  next_search.rs  show_open.rs  show_resolved.rs
docs/: commands.md  context.md  filtering.md  getting-started.md  overview.md  sync.md  templates.md
dstask/: Cargo.toml
dstask-core/: Cargo.toml
dstask-core/src/: commands.rs  config.rs  constants.rs  date_util.rs  display.rs  error.rs  git.rs  help.rs  lib.rs  local_state.rs  query.rs  table.rs  task.rs  taskset.rs  util.rs
dstask/src/: main.rs
rstask/: Cargo.toml
rstask-core/: Cargo.toml
rstask-core/src/: commands.rs  config.rs  constants.rs  date_util.rs  display.rs  error.rs  git.rs  help.rs  lib.rs  local_state.rs  query.rs  table.rs  task.rs  taskset.rs  util.rs
rstask/completions/: bash.sh  completions.fish
rstask/src/: main.rs
rstask/tests/: due_date.rs  log.rs  modify.rs  next_context.rs  next_filters.rs  next_id_index.rs  next_search.rs  show_active.rs  show_open.rs  show_paused.rs  show_resolved.rs  show_templates.rs  show_unorganised.rs
rstask/tests/common/: mod.rs
