[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Original author: naggie", "Erika \"Princesseuh\""]
edition = "2024"
license = "MIT"
repository = "https://github.com/Princesseuh/rstask"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Terminal/Display
termion = "4.0"
terminal_size = "0.3"
colored = "2.1"
unicode-width = "0.1"
atty = "0.2"

# Git integration
git2 = "0.18"

# CLI
clap = { version = "4.4", features = ["derive", "cargo", "wrap_help"] }

# Import tools
reqwest = { version = "0.11", features = ["json", "blocking"] }
toml = "0.8"

# Utilities
regex = "1.10"
url = "2.5"
lazy_static = "1.4"
home = "0.5"

# Serialization for state files
bincode = "1.3"

# Testing
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
