[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Original author: naggie", "Erika \"Princesseuh\""]
edition = "2024"
license = "MIT"
repository = "https://github.com/Princesseuh/rstask"

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Terminal/Display
termion = "4.0"
terminal_size = "0.3"
unicode-width = "0.1"
atty = "0.2"
termimad = "0.30"
clap = { version = "4.5", features = ["derive"] }

# Git integration
git2 = "0.18"
lazy_static = "1.4"
home = "0.5"
dirs = "5.0"
linkify = "0.10"

# Serialization for state files
bincode = "1.3"

# Testing
tempfile = "3.8"
