[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Original author: naggie", "Erika \"Princesseuh\""]
edition = "2024"
license = "MIT"
repository = "https://github.com/Princesseuh/rstask"

[workspace.dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Terminal/Display
termion = "4.0"
terminal_size = "0.4"
unicode-width = "0.2"
atty = "0.2"
termimad = "0.34"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
ratatui = "0.30"
crossterm = "0.29"
mdfrier = { version = "0.2", features = ["ratatui"] }

# Git integration
git2 = "0.20"
lazy_static = "1.5"
home = "0.5"
dirs = "6.0"
linkify = "0.10"

# Serialization for state files
bincode = "1.3"

# Testing
tempfile = "3.24"
