[package]
name = "rstask-core"
description = "Core library for rstask"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
git2.workspace = true
lazy_static.workspace = true
home.workspace = true
bincode.workspace = true
terminal_size.workspace = true
termion.workspace = true
unicode-width.workspace = true
tempfile.workspace = true
atty.workspace = true
termimad.workspace = true
serde_styx = { version = "1.0.1" }
dirs.workspace = true
linkify.workspace = true

[dev-dependencies]
tempfile.workspace = true
