[package]
name = "rstask"
description = "Rust Port of dstask"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rstask"
path = "src/main.rs"

[dependencies]
rstask-core = { version = "0.1", path = "../rstask-core" }
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
chrono.workspace = true
