[package]
name = "rstask"
description = "Rust Port of dstask"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rstask"
path = "src/main.rs"

[dependencies]
rstask-core = { version = "0.2.0", path = "../rstask-core" }
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
chrono.workspace = true
